--- a/package.json
+++ b/package.json
@@ -9,9 +9,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "react": "~18.2.0",
-    "react-dom": "~18.2.0",
-    "@google/genai": "^1.9.0"
+    "react": "18.3.1",
+    "react-dom/client": "18.3.1",
+    "@google/genai": "1.15.0",
+    "react-dom": "^19.1.0"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
