--- a/package.json
+++ b/package.json
@@ -3,20 +3,23 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
+  "homepage": "https://GuruGauthamN.github.io/MentalHealthMeetsAI.github.io",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist"
   },
   "dependencies": {
+    "@google/genai": "^1.10.0",
     "react": "18.3.1",
-    "react-dom/client": "18.3.1",
-    "@google/genai": "1.15.0",
-    "react-dom": "^19.1.0"
+    "react-dom": "^18.3.1"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
+    "gh-pages": "^6.3.0",
     "typescript": "~5.7.2",
-    "vite": "^6.2.0"
+    "vite": "^6.3.5"
   }
 }
