--- a/package.json
+++ b/package.json
@@ -3,23 +3,20 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
-  "homepage": "https://GuruGauthamN.github.io/MentalHealthMeetsAI",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d dist"
+    "preview": "vite preview"
   },
   "dependencies": {
-    "@google/genai": "^1.10.0",
     "react": "18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom/client": "18.3.1",
+    "@google/genai": "latest",
+    "react-dom": "18.3.1"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
-    "gh-pages": "^6.3.0",
     "typescript": "~5.7.2",
-    "vite": "^6.3.5"
+    "vite": "^6.2.0"
   }
 }
